[gd_scene load_steps=7 format=2]

[ext_resource path="res://scene/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/SpaceInvaders_Background.png" type="Texture" id=2]
[ext_resource path="res://script/Main.gd" type="Script" id=3]
[ext_resource path="res://assets/music.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.5, 307.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 511.5, 10 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="SpaceInvadersBackground" type="Sprite" parent="."]
position = Vector2( 511, 300.5 )
scale = Vector2( 16.2813, 9.54688 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="wall" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 7
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall"]
position = Vector2( -8.5, 297.5 )
shape = SubResource( 4 )

[node name="wall2" type="StaticBody2D" parent="."]
position = Vector2( 1041, 5 )
collision_layer = 8
collision_mask = 7
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall2"]
position = Vector2( -8.5, 297.5 )
shape = SubResource( 4 )

[node name="Enemy_spawn" type="Position2D" parent="."]
position = Vector2( 18, 16 )

[node name="Enemy_spawn2" type="Position2D" parent="."]
position = Vector2( 1004, 12 )

[node name="Spawn timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 513, 304 )
current = true
__meta__ = {
"_edit_lock_": true
}

[node name="end" type="Area2D" parent="."]
position = Vector2( 3, 487 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="CollisionShape2D" parent="end"]
position = Vector2( 509.5, 0 )
shape = SubResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 912.0
margin_top = 559.0
margin_right = 1023.0
margin_bottom = 600.0
text = "Score: "
align = 1
valign = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 515, 306 )
stream = ExtResource( 4 )
volume_db = 17.0
autoplay = true

[connection signal="timeout" from="Spawn timer" to="." method="_on_Spawn_timer_timeout"]
[connection signal="body_entered" from="end" to="." method="_on_end_body_entered"]
